--- a/client/src/components/linksEditor/linksEditor.module.css
+++ b/client/src/components/linksEditor/linksEditor.module.css
@@ -3,7 +3,7 @@
 } */
 
 .linksEditorContainer {
-  height: 100%;
+  /* height: 100%; */
   overflow-y: scroll;
   position: relative;
   color: var(--color-text-main);
@@ -46,7 +46,6 @@
 
 .treePreviewContainer {
   position: sticky;
-  z-index: 1;
   bottom: 0%;
   right: 0%;
   padding-top: var(--topBarHeight);
